Bug fix
Bug fix
- Fixed bug where social links would be overlapping main content on some screen sizes

--- a/contact.css
+++ b/contact.css
@@ -69,7 +69,6 @@ body::before {
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  height: 100vh;
   padding: clamp(10px, 5vw, 25px); /* adjusts padding based on viewport width */
 }
 
