--- a/my-work.css
+++ b/my-work.css
@@ -69,7 +69,6 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    height: 100vh;
     padding: clamp(10px, 5vw, 25px); /* adjusts padding based on viewport width */
   }
   
